<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">

	<ImageView
		android:id="@+id/img_animation"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:background="@drawable/fontan"
		android:scaleType="centerCrop" />

	<ImageView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:background="@drawable/line" />

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:orientation="vertical"
		android:paddingTop="20dp">

		<ImageView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:background="@drawable/name"
			android:paddingLeft="3dp" />

		<Button
			android:id="@+id/bt_place"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/bt_point" />

		<Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/bt_quest" />

		<Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/bt_map" />

		<Button
			android:id="@+id/bt_setting"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/bt_setting" />

		<Button
			android:id="@+id/bt_exit"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/bt_exit" />
	</LinearLayout>

</FrameLayout>