<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/img_animation"
        android:background="@drawable/fontan"
        android:scaleType="centerCrop"
        />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:background="@drawable/line"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:paddingTop="20dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
			android:background="@drawable/name"
            android:paddingLeft="3dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bt_point"
            android:id="@+id/bt_place" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bt_quest"
            android:id="@+id/bt_quest" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bt_map"
            android:id="@+id/bt_achiv" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bt_setting"
            android:id="@+id/bt_setting" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bt_exit"
            android:id="@+id/bt_exit" />
    </LinearLayout>

</FrameLayout>